--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_selected_paths=PackedStringArray("res://export_presets.cfg")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -19,8 +19,8 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=418
-dock_hsplit_3=-386
+dock_hsplit_2=281
+dock_hsplit_3=-303
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,22 +28,24 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/game.tscn", "res://Scenes/player.tscn", "res://Scenes/temp_tile_map_layer.tscn", "res://Scenes/wall_dust.tscn")
-current_scene="res://Scenes/wall_dust.tscn"
-center_split_offset=-257
+open_scenes=PackedStringArray("res://Scenes/game.tscn", "res://Scenes/player.tscn", "res://Scenes/temp_tile_map_layer.tscn", "res://Scenes/jump_dust.tscn")
+current_scene="res://Scenes/player.tscn"
+center_split_offset=-345
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
 screen=2
 mode="maximized"
 position=Vector2i(1920, 27)
+size=Vector2i(1152, 648)
 
 [ScriptEditor]
 
-open_scripts=["res://Scenes/game.gd", "res://Scripts/player.gd", "res://README.md"]
-selected_script="res://README.md"
+open_scripts=["res://export_presets.cfg", "res://Scenes/game.gd", "res://Scripts/player.gd", "res://README.md"]
+selected_script="res://export_presets.cfg"
 open_help=["Area2D", "CharacterBody2D", "PhysicsBody2D"]
 script_split_offset=100
 list_split_offset=0
@@ -52,7 +54,7 @@ zoom_factor=1.0
 [GameView]
 
 floating_window_rect=Rect2i(378, 151, 1164, 695)
-floating_window_screen=2
+floating_window_screen=1
 
 [ShaderEditor]
 
